--- a/_config.yml
+++ b/_config.yml
@@ -172,23 +172,23 @@ kramdown:
 
 # Collections
 collections:
-  teaching:
-    output: false
-    permalink: /:collection/:path/
+#  teaching:
+#    output: false
+#    permalink: /:collection/:path/
   publications:
     output: true
     permalink: /:collection/:path/
-  portfolio:
-    output: false
-    permalink: /:collection/:path/
-  talks:
-    output: false
-    permalink: /:collection/:path/
+#  portfolio:
+#    output: false
+#    permalink: /:collection/:path/
+#  talks:
+#    output: false
+#    permalink: /:collection/:path/
 
 
 # Defaults
 defaults:
-  # _posts
+#   _posts
 #  - scope:
 #      path: ""
 #      type: posts
@@ -199,14 +199,14 @@ defaults:
 #      comments: true
 #      share: true
 #      related: true
-  # _pages
-  - scope:
-      path: ""
-      type: pages
-    values:
-      layout: single
-      author_profile: true
-  # _teaching
+#   _pages
+#  - scope:
+#      path: ""
+#      type: pages
+#    values:
+#      layout: single
+#      author_profile: true
+#  # _teaching
 #  - scope:
 #      path: ""
 #      type: teaching
@@ -215,7 +215,7 @@ defaults:
 #      author_profile: true
 #      share: true
 #      comments: true
-  # _publications
+   #_publications
   - scope:
       path: ""
       type: publications
