--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Onkar Pandit"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "Doctoral student at INRIA. "
   location         : "Lille, France"
   employer         :
