--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : ""
+  linkedin         : "www.linkedin.com/in/onkar-pandit-3b608b28"
  # orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
