--- a/_config.yml
+++ b/_config.yml
@@ -95,12 +95,12 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/onkarpandit00786"
+  github           : "/onkarpandit00786"
   google_plus      :
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "www.linkedin.com/in/onkar-pandit-3b608b28"
+  linkedin         : "/onkar-pandit-3b608b28"
  # orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
